# demo4650

dl_demo/: LICENSE  Makefile  README.md  pyproject.toml
dl_demo/references/: HW2 (2).ipynb  LRDdemo.ipynb  demo.ipynb  newtongrad.ipynb
