[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "dl_demo"
version = "0.0.1"
description = "intial of the Dl Mth 4650"
authors = [
  { name = "Patrus" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "==3.12.10"


[tool.ruff]
line-length = 99
src = ["dl_demo"]
include = ["pyproject.toml", "dl_demo/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["dl_demo"]
force-sort-within-sections = true

